--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,7 @@
     --info-light: #64b5f6;
     --white: #fff;
     --white-dark: #e0e0e0;
+    --rounded: 0;
 }
 
 /*
@@ -87,7 +88,7 @@ body {
 
 .card {
     background-color: #fff;
-    border-radius: 1rem;
+    border-radius: var(--rounded);
     border: 1px solid var(--grey-light);
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
     display: flex;
@@ -122,7 +123,7 @@ body {
     .card__header--success,
     .card__header--warning,
     .card__header--danger {
-        border-radius: 1rem 1rem 0 0;
+        border-radius: var(--rounded) var(--rounded) 0 0;
         color: var(--white);
     }
 
@@ -172,7 +173,7 @@ body {
     border: none;
     display: inline-block;
     padding: 1rem 3rem;
-    border-radius: 0.5rem;
+    border-radius: var(--rounded);
     background-color: var(--black-dark);
     color: var(--white);
     text-decoration: none;
